fix for strange column alignment behavior on webkit

--- a/assets/css/shared.css
+++ b/assets/css/shared.css
@@ -25,7 +25,7 @@
 	margin: 2% 3% 3%;
 	padding: 0;
 	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-	width: 27.33%;
+	width: 26%; /* fix for strange webkit column behavior */  
 }
 #footer a {
 	color:#ddd;
